document.epapyrus.com/streamdocs.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: documentepapyruscom-streamdocs
  namespace: default
spec:
  serviceName: streamdocs
  replicas: 1
  selector:
    matchLabels:
      service: document.epapyrus.com
      app: streamdocs
  template:
    metadata:
      labels:
        service: document.epapyrus.com
        app: streamdocs
    spec:
      hostAliases:
        - ip: 127.0.0.1
          hostnames:
            - db
      containers:
        - name: streamdocs
          image: 730490031339.dkr.ecr.ap-northeast-2.amazonaws.com/streamdocs:document.epapyrus.com--streamdocs
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: storage
              mountPath: /ePapyrus/sd
              subPath: ./streamdocs
        - name: mariadb
          image: mariadb:10.7.3
          args:
            - --character-set-server=utf8
            - --collation-server=utf8_general_ci
          volumeMounts:
            - name: storage
              mountPath: /var/lib/mysql
              subPath: ./mariadb
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ebs
        resources:
          requests:
            storage: 2Gi
